fix: page overflow

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -7,12 +7,13 @@
 * {
     font-family: "Montserrat";
     font-weight: 400;
+    margin: 0;
+    padding: 0;
 }
 html,
 body {
-    margin: 0;
-    padding: 0;
     background: #edf2ff;
+    overflow-x: hidden;
 }
 body {
     min-height: 100vh;
